fdo#69646 Export of table with auto-width, at least one column with auto-width

- In case of auto width to table it should export as auto.
 - Added Unit Test to check it is properly exporting table.

Conflicts:

	sw/qa/extras/ooxmlexport/ooxmlexport.cxx

Change-Id: Id448111b81110bbc6c109f3da9195075b9b8a9fc